# shootemup

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
assets/: CMakeLists.txt
src/: CMakeLists.txt  app.c  app.h  array.c  array.h  asset.c  asset.h  list.c  list.h  main.c  opaque.h  resource.c  resource.h  window.c  window.h
